--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 display:block;
 }
 
-html, body {background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}
+html, body {
+	background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;
+	-webkit-print-color-adjust: exact;
+}
 
 .clear {clear: both;}
 
@@ -61,8 +64,9 @@ p {
 #headshot img {
 	width: 100%;
 	height: auto;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
+	/* 注释为头像椭圆 */
+	/* -webkit-border-radius: 50px; */
+	/* border-radius: 50px; */
 }
 
 #name {
